samples/_failures_safe/1761608529_acbcbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8be00ad2.c:161:1: error: expected identifier or ‘(’ at end of input
  161 | int
      | ^~~
